# coclico-workbench

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  check_imports.py  custom.css  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: binder-build.yml  release.yaml  tests.yaml
Datasets/: index.html
coclicodata_env/: environment.yml
data_catalog/: index.html
docs/: Datasets.md  Makefile  conf.py  data_catalog.md  example.ipynb  further_analysis.md  getting_started.md  index.md  make.bat  target_users.md
docs/overrides/: custom.css  home.html
exploratory_tools/: coastal_population_WP5.ipynb  road_exposure.ipynb  spatial_aggregation_by_level.ipynb  sus_sea_level_rise.ipynb
further_analysis/: index.html
getting_started/: index.html
notebooks/: 33_access_shorelinemonitor_raw_series.ipynb  Coclico_exposed_building.ipynb  IPCC_AR5_AR6_comparison.html  IPCC_AR5_AR6_comparison.ipynb  LAU2NUTS.ipynb  POC_cfhp.ipynb  boxes.ipynb  building_exposure.ipynb  coastal_mask_with_building_footprints.ipynb  colab-demo.ipynb  cost_benefit_adaptation.ipynb  damage_costs.ipynb  example.ipynb  global_coastal_transect_system.ipynb  pp_stats_plot.ipynb  road_exposure.ipynb  sea_level_rise_projections.ipynb  sea_surface_level.ipynb  spatial_aggregation_by_level.ipynb  template.ipynb  wave_energy_flux.ipynb
overrides/: custom.css  home.html
search/: search_index.json
src/coclico/: __init__.py  _version.py  example_module.py
src/coclico/utils/: boxes.py  cloud_services.py  geo.py
target_users/: index.html
test/: environment.yml
tutorials/: coastal_mask_with_building_footprints.ipynb  configure_coclico_module.ipynb  example_load_TIF_from_STAC_CoCliCoSLR.ipynb  example_load_TIF_from_STAC_pp.ipynb  example_load_parquet_from_STAC_GCTS.ipynb  example_load_parquet_from_STAC_pp_stats.ipynb  example_load_zarr_from_STAC_sea_surface_level.ipynb  example_load_zarr_from_STAC_wave_energy_flux.ipynb  global_coastal_transect_system.ipynb  sea_level_rise_projections.ipynb  wave_energy_flux.ipynb
