[tool.poetry]
name = "coclico"
version = "0.1.0"
description = "Python tools for Coastal Climate Core Services"
authors = ["Floris Calkoen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.11.0"
pygeos = "^0.12.0"
matplotlib = "^3.5.2"
xarray = "^2022.3.0"
zarr = "^2.12.0"
fsspec = "^2022.5.0"
rioxarray = "^0.11.1"
gcsfs = "^2022.5.0"
black = "^22.3.0"
jupyterlab = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Sphinx = "^5.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
